03-deploy-core-app/01-deploy-nexus3/conf/02-create-nexus-app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nexus3-server
  namespace: core-app
  labels:
    app: nexus3-server
    type: nexus3
spec:
  serviceName: nexus3-server
  selector:
    matchLabels:
      app: nexus3-server
  replicas: 1
  template:
    metadata:
      labels:
        app: nexus3-server
        type: nexus3
    spec:
      containers:
        - name: nexus3-server
          image: sonatype/nexus3:3.40.1
          volumeMounts:
            - name: nexus3-data
              mountPath: /nexus-data
        - name: nginx-forward
          image: nginx:1.21.1
          volumeMounts:
            - name: nginx-data
              mountPath: /etc/nginx/conf.d/

      volumes:
        - name: nexus3-data
          persistentVolumeClaim:
            claimName: pvc-nexus3-data
        - name: nginx-data
          configMap:
            name: nexus3-nginx-conf
