03-deploy-core-app/01-deploy-nexus3/conf/03-create-nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus3-server
    type: nexus3
  name: nexus3
  namespace: core-app
spec:
  ports:
    - name: nexus3-web
      protocol: TCP
      port: 80
    - name: nexus3-docker
      protocol: TCP
      port: 81
  selector:
    app: nexus3-server
