03-deploy-core-app/01-deploy-nexus3/conf/04-create-nexus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nexus3
  namespace: core-app
  labels:
    type: nexus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0" # <1>
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nexus.d7z.net
        - registry.d7z.net
      secretName: d7z-net-tls
  rules:
    - host: nexus.d7z.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus3
                port:
                  name: nexus3-web
    - host: registry.d7z.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus3
                port:
                  name: nexus3-docker
