03-deploy-core-app/01-deploy-nexus3/conf/04-create-registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nexus3-docker
  namespace: core-app
  labels:
    type: nexus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - registry.pcloud.com
      secretName: pcloud-com-tls
  rules:
    - host: registry.pcloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus3
                port:
                  name: nexus3-docker
